--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="images/thumbnail.png" type="image/x-icon">
-    <title>Pablo Díaz</title>
+    <title>SomdoTorrao</title>
 
     <link rel="stylesheet" href="css/assets/normalize.css" type="text/css">
 
@@ -32,7 +32,7 @@
             <hgroup>
 
                 <h1>
-                    <img class="img-menu-PBO" src="images/thumbnail.png" alt="Pablo Díaz" title="Pablo Díaz" />
+                    <img class="img-menu-PBO" src="images/thumbnail-menu.JPG" alt="Menu Torrao" title="Home Torroes" />
                 </h1>
 
                 <nav>
@@ -43,18 +43,18 @@
 
                             <div id="menu" class="menu"></div>
 
-                            <p>menu</p>
+                            <p>MENU</p>
 
                         </div>
 
                         <div class="main-menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="cv.html">Curriculum</a></li>
-                                <li><a href="thepbo.html">Glass</a></li>
-                                <li><a href="tzul.html">Ceramics</a></li>
-                                <li><a href="cdb.html">Clay</a></li>
-                                <li><a href="research.html">Research</a></li>
+                                <li><a href="Libro.html">Libro</a></li>
+                                <li><a href="LP.html">LP</a></li>
+                                <li><a href="Mapa.html">Mapa</a></li>
+                                <li><a href="Arquivo.html">Arquivo</a></li>
+                                <li><a href="Textos.html">Textos</a></li>
                                 <li class="has-sub-menu">
                                     <a href="collaboration.html">Collaborations</a>
                                     <!-- out
@@ -85,11 +85,6 @@
 
             <div class="wrapper-inner">
 
-                <figure class="details-image">
-
-                    <img src="images/about.jpg" alt="" class="img-responsive" />
-
-                </figure>
 
                 <div class="about-content">
 
@@ -104,16 +99,14 @@
                                 <header>
 
 
-                                    <h2 class="header-title-PBO-special"> PBO </h2>
-                                    <h5 class="header-subtitle-PBO-special">| PABLO DÍAZ |</h5>
+                                    <h2 class="smaller-title"> O som que se seconde nos Torrões </h2>
                                 </header>
 
                             </section>
 
 
-                            <video controls class="max-width-video" poster="images/PBO_thumbnail.JPG">
-                        <source src="videos/PBO_MAIN_REEL.mp4" type="video/mp4">
-                        </video>
+                            <img src="images/torrao_1.JPG" alt="" class="img-responsive" />
+
 
 
                             <section class="wrapper-inner">
@@ -121,15 +114,16 @@
 
                                 <div class="description">
 
-                                    Musician, Sound Artist, and Artisan. I have a Master's degree in Science and Art of Glass and Ceramics from the NOVA School of Science and Technology and a Master's degree in Sound Art from the Universitat de Barcelona. My work focuses on the creation
-                                    of dialogues between craft, material and technology, material and technology. I have professional training and experience in the fields of music, art and crafts, ranging from education to research and interdisciplinary
-                                    applications.
+                                    O som que se esconde nos torrões é um projeto colaborativo que procura
+                                    cruzar a disciplina do som com o entendimento do barro/terra próprio da
+                                    cerâmica, a partir de uma aproximação ao universo sonoro da terra Trafaria,
+                                    com o objetivo de consciencializar a comunidade sobre o valor da história do
+                                    lugar e, sobretudo, do potencial dos pequenos detalhes que estão à espera de
+                                    ser apanhados, tais como torrões no mato.
 
                                 </div>
 
                             </section>
-
-
 
                 </div>
 
@@ -143,13 +137,12 @@
 
         <div class="container footer-bot">
 
-            <p class="copy-right">&copy; PABLO DÍAZ | 2024</p>
+            <p class="copy-right">&copy; MARTA CASTELO & PABLO DÍAZ | 2024</p>
 
             <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
+            </a></p>
 
-            <a href="https://www.instagram.com/the_p.b.o/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/t.z.u.l/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/asuciacion.de.barri/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
 
         </div>
