--- a/Arquivo.html
+++ b/Arquivo.html
@@ -119,12 +119,6 @@
 
 
                                 <div class="description">
-                                    Cada uma das amostras recolhidas foi explorada como materia visual e sonora, os resultados podem ser observados nos
-                                    links a seguir:
-
-                                </div>
-
-                                <div class="description">
                                     <ul>
                                         <p style="margin: 0; height: 5mm;"></p>
                                         <li><a href="debruits.html">Amostra 1</a></li>
@@ -141,11 +135,6 @@
 
                                 </div>
 
-                                <div class="description">
-                                    Outras experiencias tanto artísticas como técnicas foram 
-                                    realizadas a modo de aprofondir no conhecimento dos materiais
-
-                                </div>
 
                                 <div class="description">
                                     <ul>
@@ -179,7 +168,7 @@
         <div class="container footer-bot">
 
  
-            <p class="copy-right">&copy; MARTA CASTELO & PABLO DÍAZ | 2024</p>
+            <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
             <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
             <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
