--- a/LP.html
+++ b/LP.html
@@ -118,13 +118,33 @@
 
                             <section class="wrapper-inner">
 
+                                <div class="description">
+                                    A trabalho sonoro do "som que se se esconde nos torrões" , é um exerciso de recolha, edição e refleção sobre amostras de torrões recolhidos em diversos
+                                    pontos da Trafaria. Cada uma das propostas corresponde a diversas técnicas de registo e co-criação com a matéria. Alguns exercisos correspondem a derivas e paisagens
+                                    sonoras, outros com sonoplastias e collages sonoros onde as amostras (sinal de audio) são tratadas em conosonança com as suas contrapartes analogas (amostras de terra).
+ 
+                                 </div>
+
 
                                 <div class="description">
-                                   A trabalho sonoro do "som que se se esconde nos torrões" , é um exerciso de recolha, edição e refleção sobre amostras de torrões recolhidos em diversos
-                                   pontos da Trafaria. Cada uma das propostas corresponde a diversas técnicas de registo e co-criação com a matéria. Alguns exercisos correspondem a derivas e paisagens
-                                   sonoras, outros com sonoplastias e collages sonoros onde as amostras (sinal de audio) são tratadas em conosonança com as suas contrapartes analogas (amostras de terra).
+                                    <ul>
+                                        <p style="margin: 0; height: 5mm;"></p>
+                                        <li><a href="debruits.html">Amostra 1</a></li>
+                                        <li><a href="debruits.html">Amostra 2</a></li>
+                                        <li><a href="debruits.html">Amostra 3</a></li>
+                                        <li><a href="debruits.html">Amostra 4</a></li>
+                                        <li><a href="debruits.html">Amostra 5</a></li>
+                                        <li><a href="debruits.html">Amostra 6</a></li>
+                                        <li><a href="debruits.html">Amostra 7</a></li>
+                                        <li><a href="debruits.html">Amostra 8</a></li>
+                                        <li><a href="debruits.html">Amostra 9</a></li>
+
+                                    </ul>
 
                                 </div>
+
+
+
 
                             </section>
 
@@ -142,13 +162,13 @@
 
         <div class="container footer-bot">
 
-            <p class="copy-right">&copy; MARTA CASTELO & PABLO DÍAZ | 2024</p>
+            <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
             <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
             <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
             </a></p>
-            <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
 
+            <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
         </div>
 
     </footer>
