--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
         <div class="container footer-bot">
 
-            <p class="copy-right">&copy; MARTA CASTELO & PABLO DÍAZ | 2024</p>
+            <p class="copy-right">&copy;  Marta Castelo & Pablo Díaz | 2024 </p>
 
             <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
             <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
