--- a/Libro.html
+++ b/Libro.html
@@ -32,7 +32,7 @@
             <hgroup>
 
                 <h1>
-                    <img class="img-menu-PBO" src="images/thumbnail.png" alt="Pablo Díaz" title="Pablo Díaz" />
+                    <img class="img-menu-PBO" src="images/thumbnail-menu.JPG"  alt="Menu Torrao" title="Livro Torrao" />
                 </h1>
 
                 <nav>
@@ -104,16 +104,19 @@
                                 <header>
 
 
-                                    <h2 class="header-title-PBO-special">LP</h2>
+                                    <h2 class="header-title-PBO-special">Livro</h2>
                                 </header>
 
                             </section>
-
-
-                            <video controls class="max-width-video" poster="images/PBO_thumbnail.JPG">
-                        <source src="videos/PBO_MAIN_REEL.mp4" type="video/mp4">
-                        </video>
-
+                            <div style="position: relative; width: 100%; height: 0; padding-top: 78.8865%;
+                            padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+                            border-radius: 8px; will-change: transform;">
+                             <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                               src="https://www.canva.com/design/DAGTwC-QPiA/dsoGN1-DfOPQc9Y7sVTttg/watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+                             </iframe>
+                           </div>
+                          
+ 
 
                             <section class="wrapper-inner">
 
@@ -139,13 +142,12 @@
 
         <div class="container footer-bot">
 
-            <p class="copy-right">&copy; PABLO DÍAZ | 2024</p>
+            <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
             <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
+            </a></p>
 
-            <a href="https://www.instagram.com/the_p.b.o/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/t.z.u.l/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/asuciacion.de.barri/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
 
         </div>
