--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                             <div id="menu" class="menu"></div>
 
-                            <p>MENU</p>
+                            <p>Menu</p>
 
                         </div>
 
