--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <header>
 
 
-                                    <h2 class="smaller-title"> O som que se seconde nos Torrões </h2>
+                                    <h2 class="smaller-title"> O som que se seconde nos Torrões the Test</h2>
                                 </header>
 
                             </section>
