--- a/Arquivo.html
+++ b/Arquivo.html
@@ -32,7 +32,7 @@
             <hgroup>
 
                 <h1>
-                    <img class="img-menu-PBO" src="images/thumbnail-menu.JPG" alt="Menu Torrao" title="Home Torroes"/>
+                    <img class="img-menu-PBO" src="images/thumbnail-menu.JPG" alt="Menu Torrao" title="Home Torroes" />
                 </h1>
 
                 <nav>
@@ -55,17 +55,6 @@
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
                                 <li><a href="Textos.html">Textos</a></li>
-                                <li class="has-sub-menu">
-                                    <a href="collaboration.html">Collaborations</a>
-                                    <!-- out
-                                    <ul class="sub-menu">
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">De Bruits</a></li>
-                                        <li><a href="colectivo-gabiru.html">Colectivo Gabirú</a></li>
-                                        <li><a href="cacos.html">C.A.C.O.S</a></li>
-                                    </ul>
-                                    -->
-                                </li>
                             </ul>
                         </div>
 
@@ -110,9 +99,8 @@
                             </section>
 
 
-                            <iframe width="100%" height="580" src="https://www.youtube.com/embed/oas0NUPA1yI?si=k5SjJUD5knvfV7ys" title="YouTube video player"
-                             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="100%" height="580" src="https://www.youtube.com/embed/oas0NUPA1yI?si=k5SjJUD5knvfV7ys" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
                             <section class="wrapper-inner">
@@ -155,11 +143,11 @@
 
 
 
+                            </div>
+
                 </div>
 
             </div>
-
-        </div>
 
     </main>
 
@@ -167,12 +155,10 @@
 
         <div class="container footer-bot">
 
- 
             <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
-            <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
-            <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
-            </a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com</a></p>
 
             <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
 
