--- a/LP.html
+++ b/LP.html
@@ -55,17 +55,6 @@
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
                                 <li><a href="Textos.html">Textos</a></li>
-                                <li class="has-sub-menu">
-                                    <a href="collaboration.html">Collaborations</a>
-                                    <!-- out
-                                    <ul class="sub-menu">
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">De Bruits</a></li>
-                                        <li><a href="colectivo-gabiru.html">Colectivo Gabirú</a></li>
-                                        <li><a href="cacos.html">C.A.C.O.S</a></li>
-                                    </ul>
-                                    -->
-                                </li>
                             </ul>
                         </div>
 
@@ -110,20 +99,19 @@
                             </section>
 
 
-                            <iframe width="100%" height="500px" scrolling="no" frameborder="20" 
-                            allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1801188277&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-897104219" title="PBO|TZUL|CDB" target="_blank" style="color: #cccccc; text-decoration: none;">PBO|TZUL|CDB</a> · <a href="https://soundcloud.com/user-897104219/sets/samples-raw-970c-1170c-1200c-1210c-1240c-1250c" 
-                                title="Samples (RAW - 970°C - 1170°C - 1200°C -1210°C - 1240°C -1250°C)" target="_blank" 
-                                style="color: #cccccc; text-decoration: none;">Samples (RAW - 970°C - 1170°C - 1200°C -1210°C - 1240°C -1250°C)</a></div>
+                            <iframe width="100%" height="500px" scrolling="no" frameborder="20" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1801188277&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                            <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-897104219" title="PBO|TZUL|CDB" target="_blank" style="color: #cccccc; text-decoration: none;">PBO|TZUL|CDB</a> · <a href="https://soundcloud.com/user-897104219/sets/samples-raw-970c-1170c-1200c-1210c-1240c-1250c"
+                                    title="Samples (RAW - 970°C - 1170°C - 1200°C -1210°C - 1240°C -1250°C)" target="_blank" style="color: #cccccc; text-decoration: none;">Samples (RAW - 970°C - 1170°C - 1200°C -1210°C - 1240°C -1250°C)</a></div>
 
 
                             <section class="wrapper-inner">
 
                                 <div class="description">
-                                    A trabalho sonoro do "som que se se esconde nos torrões" , é um exerciso de recolha, edição e refleção sobre amostras de torrões recolhidos em diversos
-                                    pontos da Trafaria. Cada uma das propostas corresponde a diversas técnicas de registo e co-criação com a matéria. Alguns exercisos correspondem a derivas e paisagens
-                                    sonoras, outros com sonoplastias e collages sonoros onde as amostras (sinal de audio) são tratadas em conosonança com as suas contrapartes analogas (amostras de terra).
- 
-                                 </div>
+                                    A trabalho sonoro do "som que se se esconde nos torrões" , é um exerciso de recolha, edição e refleção sobre amostras de torrões recolhidos em diversos pontos da Trafaria. Cada uma das propostas corresponde a diversas técnicas de registo e co-criação
+                                    com a matéria. Alguns exercisos correspondem a derivas e paisagens sonoras, outros com sonoplastias e collages sonoros onde as amostras (sinal de audio) são tratadas em conosonança com as suas contrapartes analogas
+                                    (amostras de terra).
+
+                                </div>
 
 
                                 <div class="description">
@@ -164,11 +152,11 @@
 
             <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
-            <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
-            <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
-            </a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com</a></p>
 
             <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
+
         </div>
 
     </footer>
