--- a/Libro.html
+++ b/Libro.html
@@ -32,7 +32,7 @@
             <hgroup>
 
                 <h1>
-                    <img class="img-menu-PBO" src="images/thumbnail-menu.JPG"  alt="Menu Torrao" title="Livro Torrao" />
+                    <img class="img-menu-PBO" src="images/thumbnail-menu.JPG" alt="Menu Torrao" title="Livro Torrao" />
                 </h1>
 
                 <nav>
@@ -55,17 +55,6 @@
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
                                 <li><a href="Textos.html">Textos</a></li>
-                                <li class="has-sub-menu">
-                                    <a href="collaboration.html">Collaborations</a>
-                                    <!-- out
-                                    <ul class="sub-menu">
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">De Bruits</a></li>
-                                        <li><a href="colectivo-gabiru.html">Colectivo Gabirú</a></li>
-                                        <li><a href="cacos.html">C.A.C.O.S</a></li>
-                                    </ul>
-                                    -->
-                                </li>
                             </ul>
                         </div>
 
@@ -111,12 +100,11 @@
                             <div style="position: relative; width: 100%; height: 0; padding-top: 78.8865%;
                             padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
                             border-radius: 8px; will-change: transform;">
-                             <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-                               src="https://www.canva.com/design/DAGTwC-QPiA/dsoGN1-DfOPQc9Y7sVTttg/watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+                                <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAGTwC-QPiA/dsoGN1-DfOPQc9Y7sVTttg/watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
                              </iframe>
-                           </div>
-                          
- 
+                            </div>
+
+
 
                             <section class="wrapper-inner">
 
@@ -144,16 +132,14 @@
 
             <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
-            <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
-            <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
-            </a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com</a></p>
 
             <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
 
         </div>
 
     </footer>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 
     <script>
