--- a/Mapa.html
+++ b/Mapa.html
@@ -55,17 +55,6 @@
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
                                 <li><a href="Textos.html">Textos</a></li>
-                                <li class="has-sub-menu">
-                                    <a href="collaboration.html">Collaborations</a>
-                                    <!-- out
-                                    <ul class="sub-menu">
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">De Bruits</a></li>
-                                        <li><a href="colectivo-gabiru.html">Colectivo Gabirú</a></li>
-                                        <li><a href="cacos.html">C.A.C.O.S</a></li>
-                                    </ul>
-                                    -->
-                                </li>
                             </ul>
                         </div>
 
@@ -117,11 +106,10 @@
 
 
                                 <div class="description">
-                                Além do trabalho propriamente artístico, "O som que se esconde nos torrões", é um exercício de mapeo, de deriva e identificação.
-                                É uma tentativa de ligar materias, pessoas e espaços num lugar só, neste caso, a cidade da Trafaria. Este mapa, feito no my Maps da Google, é um 
-                                convite a quem mora ou conhece a Trafaria, é uma sugestão, um paseio e uma descoberta. Os torrões estão a vista de todxs, as enconstas são parte da paisagem.
-                                Os sons que arrodeiam os torrões são de tudos aquilos que conseuguem ouvir, nem só com os ouvidos, também com as mãos e o corpo tudo. Este mapa, além de mapa é 
-                                uma bitácora de viagem, de rota e é um artifacto, onde nos muito amor começamos a nosa interação com a terra, a sua gente a aquilo que elxs têm para oferecer.  
+                                    Além do trabalho propriamente artístico, "O som que se esconde nos torrões", é um exercício de mapeo, de deriva e identificação. É uma tentativa de ligar materias, pessoas e espaços num lugar só, neste caso, a cidade da Trafaria. Este mapa, feito no my
+                                    Maps da Google, é um convite a quem mora ou conhece a Trafaria, é uma sugestão, um paseio e uma descoberta. Os torrões estão a vista de todxs, as enconstas são parte da paisagem. Os sons que arrodeiam os torrões são
+                                    de tudos aquilos que conseuguem ouvir, nem só com os ouvidos, também com as mãos e o corpo tudo. Este mapa, além de mapa é uma bitácora de viagem, de rota e é um artifacto, onde nos muito amor começamos a nosa interação
+                                    com a terra, a sua gente a aquilo que elxs têm para oferecer.
 
                                 </div>
 
@@ -141,18 +129,16 @@
 
         <div class="container footer-bot">
 
-            <p class="copy-right">&copy; MARTA CASTELO & PABLO DÍAZ | 2024</p>
+            <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
-            <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
-            <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
-            </a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com</a></p>
 
             <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
 
         </div>
 
     </footer>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 
     <script>
