--- a/Textos.html
+++ b/Textos.html
@@ -55,17 +55,6 @@
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
                                 <li><a href="Textos.html">Textos</a></li>
-                                <li class="has-sub-menu">
-                                    <a href="collaboration.html">Collaborations</a>
-                                    <!-- out
-                                    <ul class="sub-menu">
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">De Bruits</a></li>
-                                        <li><a href="colectivo-gabiru.html">Colectivo Gabirú</a></li>
-                                        <li><a href="cacos.html">C.A.C.O.S</a></li>
-                                    </ul>
-                                    -->
-                                </li>
                             </ul>
                         </div>
 
@@ -139,13 +128,11 @@
 
         <div class="container footer-bot">
 
-            <p class="copy-right">&copy; PABLO DÍAZ | 2024</p>
+            <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
-            <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com</a></p>
 
-            <a href="https://www.instagram.com/the_p.b.o/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/t.z.u.l/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/asuciacion.de.barri/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
 
         </div>
