--- a/index.html
+++ b/index.html
@@ -55,17 +55,6 @@
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
                                 <li><a href="Textos.html">Textos</a></li>
-                                <li class="has-sub-menu">
-                                    <a href="collaboration.html">Collaborations</a>
-                                    <!-- out
-                                    <ul class="sub-menu">
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">De Bruits</a></li>
-                                        <li><a href="colectivo-gabiru.html">Colectivo Gabirú</a></li>
-                                        <li><a href="cacos.html">C.A.C.O.S</a></li>
-                                    </ul>
-                                    -->
-                                </li>
                             </ul>
                         </div>
 
@@ -114,12 +103,8 @@
 
                                 <div class="description">
 
-                                    O som que se esconde nos torrões é um projeto colaborativo que procura
-                                    cruzar a disciplina do som com o entendimento do barro/terra próprio da
-                                    cerâmica, a partir de uma aproximação ao universo sonoro da terra Trafaria,
-                                    com o objetivo de consciencializar a comunidade sobre o valor da história do
-                                    lugar e, sobretudo, do potencial dos pequenos detalhes que estão à espera de
-                                    ser apanhados, tais como torrões no mato.
+                                    O som que se esconde nos torrões é um projeto colaborativo que procura cruzar a disciplina do som com o entendimento do barro/terra próprio da cerâmica, a partir de uma aproximação ao universo sonoro da terra Trafaria, com o objetivo de consciencializar
+                                    a comunidade sobre o valor da história do lugar e, sobretudo, do potencial dos pequenos detalhes que estão à espera de ser apanhados, tais como torrões no mato.
 
                                 </div>
 
@@ -137,11 +122,10 @@
 
         <div class="container footer-bot">
 
-            <p class="copy-right">&copy;  Marta Castelo & Pablo Díaz | 2024 </p>
+            <p class="copy-right">&copy; Marta Castelo & Pablo Díaz | 2024 </p>
 
-            <p class="mail-to"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
-            <p class="mail-to"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com
-            </a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
+            <p class="mail-to" style="font-size: smaller;"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com</a></p>
 
             <p class="disclaimer-browser"> | VERSION FOR BROWSER |</p>
 
