--- a/Libro.html
+++ b/Libro.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="images/thumbnail.png" type="image/x-icon">
-    <title>SomDeTorrão</title>
+    <title>O som que se esconde nos Torrões</title>
 
     <link rel="stylesheet" href="css/assets/normalize.css" type="text/css">
 
@@ -50,7 +50,7 @@
                         <div class="main-menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="Libro.html">Libro</a></li>
+                                <li><a href="Libro.html">Livro</a></li>
                                 <li><a href="LP.html">LP</a></li>
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
@@ -91,9 +91,7 @@
                             <section class="wrapper-inner">
 
                                 <header>
-
-
-                                    <h2 class="header-title-PBO-special">Livro</h2>
+                                    <h2 class="section-title">Livro</h2>
                                 </header>
 
                             </section>
