--- a/Arquivo.html
+++ b/Arquivo.html
@@ -91,9 +91,7 @@
                             <section class="wrapper-inner">
 
                                 <header>
-
-
-                                    <h2 class="header-title-PBO-special">Arquivo</h2>
+                                    <h2 class="section-title">Arquivo</h2>
                                 </header>
 
                             </section>
