--- a/LP.html
+++ b/LP.html
@@ -91,9 +91,7 @@
                             <section class="wrapper-inner">
 
                                 <header>
-
-
-                                    <h2 class="header-title-PBO-special">LP</h2>
+                                    <h2 class="section-title">LP</h2>
                                 </header>
 
                             </section>
