--- a/Textos.html
+++ b/Textos.html
@@ -91,9 +91,7 @@
                             <section class="wrapper-inner">
 
                                 <header>
-
-
-                                    <h2 class="header-title-PBO-special">Textos</h2>
+                                    <h2 class="section-title">Textos</h2>
                                 </header>
 
                             </section>
