--- a/libro_outro.html
+++ b/libro_outro.html
@@ -91,9 +91,7 @@
                             <section class="wrapper-inner">
 
                                 <header>
-
-
-                                    <h2 class="header-title-PBO-special">Libro 2</h2>
+                                    <h2 class="section-title">Livro 2</h2>
                                 </header>
 
                             </section>
