--- a/LP.html
+++ b/LP.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <link rel="shortcut icon" href="images/thumbnail.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/thumbnail-menu.JPG" type="image/x-icon">
     <title>O som que se esconde nos Torrões</title>
 
     <link rel="stylesheet" href="css/assets/normalize.css" type="text/css">
