--- a/Arquivo.html
+++ b/Arquivo.html
@@ -43,7 +43,7 @@
 
                             <div id="menu" class="menu"></div>
 
-                            <p>menu</p>
+                            <p>Menu</p>
 
                         </div>
 
