--- a/Libro.html
+++ b/Libro.html
@@ -32,7 +32,7 @@
             <hgroup>
 
                 <h1>
-                    <img class="img-menu-PBO" src="images/thumbnail-menu.JPG" alt="Menu Torrao" title="Livro Torrao" />
+                    <img class="img-menu-PBO" src="images/thumbnail-menu.JPG" alt="Menu Torrao" title="Home Torroes" />
                 </h1>
 
                 <nav>
@@ -43,7 +43,7 @@
 
                             <div id="menu" class="menu"></div>
 
-                            <p>menu</p>
+                            <p>Menu</p>
 
                         </div>
 
