--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
                         <div class="nav-icon">
 
-                            <div id="menu" class="menu"></div>
+                            <div id="menu" class="menu">
+                                <p>Menu</p>
+                            </div>
 
-                            <p>Menu</p>
+
 
                         </div>
 
