--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="nav-icon">
 
                             <div id="menu" class="menu">
-                                <p>Menu</p>
+                                <p>Menu2</p>
                             </div>
 
 
