--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
                         <div class="nav-icon">
 
                             <div id="menu" class="menu">
-                                <p>Menu2</p>
+                                <p>Menu</p>
                             </div>
-
-
 
                         </div>
 
