--- a/Arquivo.html
+++ b/Arquivo.html
@@ -153,7 +153,8 @@
 
         <div class="container footer-bot">
 
-            <p class="copy-right">&copy; Marta Castelo & PBO | 2024 </p>
+            <p class="copy-right">&copy; Marta Castelo & PBO</p>
+            <p class="copy-right">| 2024 |</p>
 
             <p class="mail-to" style="font-size: smaller;"><a href="mailto:p.tra.zuld@gmail.com">p.tra.zuld@gmail.com</a></p>
             <p class="mail-to" style="font-size: smaller;"><a href="mailto:martacastelo1711@gmail.com">martacastelo1711@gmail.com</a></p>
