--- a/index.html
+++ b/index.html
@@ -106,12 +106,18 @@
                                 </div>
 
                             </section>
+                            <audio controls autoplay loop >
+                                <source src="audio/biblioteca.wav" type="audio/wav">
+                            </audio>
 
                 </div>
 
             </div>
 
+
         </div>
+
+
 
     </main>
 
