--- a/Arquivo.html
+++ b/Arquivo.html
@@ -107,15 +107,89 @@
                                 <div class="description">
                                     <ul>
                                         <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">Amostra 1</a></li>
-                                        <li><a href="debruits.html">Amostra 2</a></li>
-                                        <li><a href="debruits.html">Amostra 3</a></li>
-                                        <li><a href="debruits.html">Amostra 4</a></li>
-                                        <li><a href="debruits.html">Amostra 5</a></li>
-                                        <li><a href="debruits.html">Amostra 6</a></li>
-                                        <li><a href="debruits.html">Amostra 7</a></li>
-                                        <li><a href="debruits.html">Amostra 8</a></li>
-                                        <li><a href="debruits.html">Amostra 9</a></li>
+                                        <li> <p>Amostra 2</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_2.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/amostra_2_raw_hidrated.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+                                        <p style="margin: 0; height: 5mm;"></p>
+                                        <li> <p>Amostra 3</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_3.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/amostra_3_raw_hidrated.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+                                        <li> <p>Amostra 4</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_4.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/amostra_4_raw_hidrated.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+                                        <li> <p>Amostra 5</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_5.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+                                        <li> <p>Amostra 5</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_5.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+                                        <li> <p>Amostra 6</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_6.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/amostra_6_raw_hidrated.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+                                        <li> <p>Amostra 7</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_7.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/amostra_7_raw_hidrated.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+                                        <li> <p>Amostra 8</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_8.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/amostra_8_raw_hidrated.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+                                        <li> <p>Amostra 9</p>                           
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/agitar_9.wav" type="audio/wav">
+                                        </audio>
+                                        <br>
+                                        <audio controls autoplay loop >
+                                        <source src="audio/amostras/amostra_9_raw_hidrated.wav" type="audio/wav">
+                                        </audio>
+                                        </li>
+
 
                                     </ul>
 
