--- a/LP.html
+++ b/LP.html
@@ -97,9 +97,9 @@
                             </section>
 
 
-                            <iframe width="100%" height="500px" scrolling="no" frameborder="20" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1801188277&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                            <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-897104219" title="PBO|TZUL|CDB" target="_blank" style="color: #cccccc; text-decoration: none;">PBO|TZUL|CDB</a> · <a href="https://soundcloud.com/user-897104219/sets/samples-raw-970c-1170c-1200c-1210c-1240c-1250c"
-                                    title="Samples (RAW - 970°C - 1170°C - 1200°C -1210°C - 1240°C -1250°C)" target="_blank" style="color: #cccccc; text-decoration: none;">Samples (RAW - 970°C - 1170°C - 1200°C -1210°C - 1240°C -1250°C)</a></div>
+                            <iframe width="100%" height="580" src="https://www.youtube.com/embed/videoseries?si=wL3df6AZa0PWxi7J&amp;list=PLoUs67O56HWpbYtI7r7u0GO5rjTJoUn8N" 
+                            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
                             <section class="wrapper-inner">
